err/paragrep.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports.tempfile-1.0.dist-info'...
Listing './lib/python3.5/site-packages/backports.weakref-1.0.post1.dist-info'...
Listing './lib/python3.5/site-packages/grizzled'...
Listing './lib/python3.5/site-packages/grizzled/collections'...
Listing './lib/python3.5/site-packages/grizzled/db'...
Compiling './lib/python3.5/site-packages/grizzled/db/__init__.py'...
***   File "./lib/python3.5/site-packages/grizzled/db/__init__.py", line 203
    exec 'd = %s()' % o
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/grizzled/db/base.py'...
***   File "./lib/python3.5/site-packages/grizzled/db/base.py", line 407
    exec 'self.%s = dbi.%s' % (attr, attr)
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/grizzled/file'...
Listing './lib/python3.5/site-packages/grizzled/io'...
Listing './lib/python3.5/site-packages/grizzled/net'...
Listing './lib/python3.5/site-packages/grizzled/net/ftp'...
Compiling './lib/python3.5/site-packages/grizzled/net/ftp/parse.py'...
***   File "./lib/python3.5/site-packages/grizzled/net/ftp/parse.py", line 690
    'time':    (current_year, 1, 29, 03, 26, 0, 0, 0, -1),
                                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/grizzled/system.py'...
***   File "./lib/python3.5/site-packages/grizzled/system.py", line 246
    exec 'from %s import %s' % (package, class_name)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/grizzled/text'...
Listing './lib/python3.5/site-packages/grizzled_python-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/paragrep'...
Compiling './lib/python3.5/site-packages/paragrep/__init__.py'...
***   File "./lib/python3.5/site-packages/paragrep/__init__.py", line 255
    except IOError, (err, msg):
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paragrep-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/collections'...
Compiling './lib/python3.5/site-packages/test/collections/TestLRUDict.py'...
***   File "./lib/python3.5/site-packages/test/collections/TestLRUDict.py", line 28
    print "Adding 'a' and 'b'"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/test/config'...
Listing './lib/python3.5/site-packages/test/file'...
Listing './lib/python3.5/site-packages/test/io'...
Compiling './lib/python3.5/site-packages/test/io/TestPushback.py'...
***   File "./lib/python3.5/site-packages/test/io/TestPushback.py", line 34
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/test/system'...
Listing './lib/python3.5/site-packages/test/text'...
Compiling './lib/python3.5/site-packages/test/text/TestStr2Bool.py'...
***   File "./lib/python3.5/site-packages/test/text/TestStr2Bool.py", line 34
    print '"%s" -> %s. Expected=%s' % (s2, expected, val)
                                  ^
SyntaxError: invalid syntax

Listing './man'...
Listing './share'...
Listing './share/python-wheels'...
